--- a/style_partenaires.css
+++ b/style_partenaires.css
@@ -10,7 +10,7 @@
 .part_container img{
 	width: 10vw;
 	height: 10vw;
-	object-fit: cover;
+	object-fit: contain;
 	border-radius: 50%;
 	margin-right: 1vw;
 }
